--- a/src/ui/forms/FilePicker.less
+++ b/src/ui/forms/FilePicker.less
@@ -1,5 +1,7 @@
 
 .file-picker {
+	position: relative;
+
 	&.isMulti {
 		&.has-heading > div, &:not(.has-heading) {
 			white-space: normal;
